Fjerner bruk av SøknadDokument som en saksopplysning og bytter ut med å bruke Behandlingsgrunnlag